compiler/tests/liva/errors/e4006_symbol_not_found.liva
// Error Test: E4006 — Symbol not found in module
// EXPECT: E4006
import { nonexistent } from "./import_helper.liva"

main() {
    print(nonexistent())
}
